Improve examples default style

--- a/packages/dicomImageLoader/examplesOld/index.html
+++ b/packages/dicomImageLoader/examplesOld/index.html
@@ -3,6 +3,15 @@
   <head>
     <!-- twitter bootstrap CSS stylesheet - not required by cornerstone -->
     <link href="bootstrap.min.css" rel="stylesheet" />
+    <style>
+      body {
+        background: #090B2B !important;
+        color: #ffffff !important;
+      }
+      .container {
+        background: #090B2B !important;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
