--- a/packages/dicomImageLoader/examplesOld/progressive-jph/index.html
+++ b/packages/dicomImageLoader/examplesOld/progressive-jph/index.html
@@ -5,6 +5,15 @@
     <!-- twitter bootstrap CSS stylesheet - included to make things pretty, not needed or used by cornerstone -->
     <link href="../bootstrap.min.css" rel="stylesheet">
     <link href="../cornerstone.min.css" rel="stylesheet">
+    <style>
+      body {
+        background: #090B2B !important;
+        color: #ffffff !important;
+      }
+      .container {
+        background: #090B2B !important;
+      }
+    </style>
 </head>
 
 <body>
@@ -128,7 +137,7 @@
         const viewportContainer = document.getElementById('viewports');
         const viewportDiv = document.createElement('div');
         viewportDiv.classList = 'disable-selection noIbar'
-        viewportDiv.style = 'width:200px;height:200px;position:relative;color: white;display:inline-block;border-style:solid;border-color:black;'
+        viewportDiv.style = 'width:200px;height:200px;position:relative;color: white;display:inline-block;border-style:solid;border-color:#1a1d3f;background:#090B2B;'
         viewportDiv.onmousedown = 'return false;'
         const canvasDiv = document.createElement('div');
         canvasDiv.style = 'width:200px;height:200px;';
