--- a/packages/dicomImageLoader/examplesOld/wadouri/index.html
+++ b/packages/dicomImageLoader/examplesOld/wadouri/index.html
@@ -4,6 +4,15 @@
     <!-- twitter bootstrap CSS stylesheet - included to make things pretty, not needed or used by cornerstone -->
     <link href="../bootstrap.min.css" rel="stylesheet">
     <link href="../cornerstone.min.css" rel="stylesheet">
+    <style>
+      body {
+        background: #090B2B !important;
+        color: #ffffff !important;
+      }
+      .container {
+        background: #090B2B !important;
+      }
+    </style>
 </head>
 <body>
 <div class="container">
@@ -112,7 +121,7 @@
     <br>
     <div class="row">
         <div class="col-md-6">
-            <div style="width:512px;height:512px;position:relative;color: white;display:inline-block;border-style:solid;border-color:black;"
+            <div style="width:512px;height:512px;position:relative;color: white;display:inline-block;border-style:solid;border-color:#1a1d3f;background:#090B2B;"
                  oncontextmenu="return false"
                  class='disable-selection noIbar'
                  unselectable='on'
