--- a/packages/dicomImageLoader/examplesOld/wadors/index.html
+++ b/packages/dicomImageLoader/examplesOld/wadors/index.html
@@ -5,6 +5,15 @@
     <link href="../bootstrap.min.css" rel="stylesheet">
 
     <link href="../cornerstone.min.css" rel="stylesheet">
+    <style>
+      body {
+        background: #090B2B !important;
+        color: #ffffff !important;
+      }
+      .container {
+        background: #090B2B !important;
+      }
+    </style>
 
 </head>
 <body>
@@ -41,7 +50,7 @@
         </form>
     </div>
 
-    <div style="width:512px;height:512px;position:relative;color: white;display:inline-block;border-style:solid;border-color:black;"
+    <div style="width:512px;height:512px;position:relative;color: white;display:inline-block;border-style:solid;border-color:#1a1d3f;background:#090B2B;"
          oncontextmenu="return false"
          class='disable-selection noIbar'
          unselectable='on'
